# pdftools

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AUTHORS  BUGS  CONTRIBUTING.md  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.ZLIB  README.md  THANKS  TODO  aclocal.m4  config.h.in  configure  configure.ac  doxygen  libtool  sonar-project.properties  sonar.sh
.github/workflows/: c-cpp.yml  codeql.yml
debian/: changelog  control  rules
m4/: m4_ax_check_zlib.m4
pdftools/: .gitignore
pdftools.xcodeproj/: project.pbxproj
pdftools.xcodeproj/project.xcworkspace/xcuserdata/leonardocosta.xcuserdatad/: UserInterfaceState.xcuserstate
pdftools.xcodeproj/xcuserdata/leonardocosta.xcuserdatad/xcschemes/: pdftools.xcscheme  xcschememanagement.plist
pdftools/src/: analyze.cpp  converter.cpp  converter.h  genericparser.cpp  scanner.h
pdftools/src/nodes/.deps/: .gitignore
pdftools/src/xml/: .gitignore
src/: Makefile.am  Makefile.in  analyze.cpp  analyze.h  cmapparser.cpp  cmapparser.h  converter.cpp  converter.h  generator.cpp  generator.h  genericexception.cpp  genericexception.h  genericparser.cpp  main.cpp  packages.config  pageanalyze.cpp  pageanalyze.h  pageparser.cpp  parser.cpp  parser.h  pdftools.1  pdftools.1.in  pdftools.pro  pdftools.sln  pdftools.vcxproj  pdftools.vcxproj.filters  scanner.cpp  scanner.h  suittest.cpp  utils.cpp  utils.h
src/epub/: Makefile.am  Makefile.in  epub.cpp  epub.h
src/getopt/: dllmain.cpp  getopt.c  getopt.cpp  getopt.h  getopt.vcxproj  getopt.vcxproj.filters
src/glyphs/: Makefile.am  Makefile.in  breakglyph.cpp  breakglyph.h  fontglyph.cpp  fontglyph.h  fontsizeglyph.cpp  fontsizeglyph.h  glyph.cpp  glyph.h  glyphs.h  paragraphglyph.cpp  paragraphglyph.h  textglyph.cpp  textglyph.h
src/graphics/: Makefile.am  Makefile.in  graphicstate.cpp  graphicstate.h  state.cpp  state.h
src/html/: Makefile.am  Makefile.in  html.cpp  html.h
src/nodes/: Makefile.am  Makefile.in  arraynode.cpp  arraynode.h  bdcnode.cpp  bdcnode.h  booleannode.cpp  booleannode.h  breaknode.cpp  breaknode.h  charnode.cpp  charnode.h  cmapnode.cpp  cmapnode.h  codespacenode.cpp  codespacenode.h  fontnode.cpp  fontnode.h  mapnode.cpp  mapnode.h  namenode.cpp  namenode.h  nodes.h  numbernode.cpp  numbernode.h  objnode.cpp  objnode.h  refnode.cpp  refnode.h  rootnode.cpp  rootnode.h  statenode.cpp  statenode.h  stringnode.cpp  stringnode.h  textmatrixnode.cpp  textmatrixnode.h  textnode.cpp  textnode.h  treenode.cpp  (+3 more)
src/parser/: Makefile.am  Makefile.in  cmapparser.cpp  cmapparser.h  genericparser.cpp  genericparser.h  pageparser.cpp  pageparser.h  parser.cpp  parser.h  scanner.cpp  scanner.h  token.cpp  token.h
src/pdftools.xcodeproj/: project.pbxproj
src/pdftools.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
src/pdftools.xcodeproj/xcshareddata/xcschemes/: pdftools.xcscheme  test.xcscheme
src/semantic/: Makefile.am  Makefile.in  context.cpp  context.h  document.cpp  document.h  font.cpp  font.h  outline.cpp  outline.h  page.cpp  page.h  pagelabel.cpp  pagelabel.h
src/tests/: Makefile.am  Makefile.in  littletest.h  main.cpp  stream1.txt  stream2.txt  stream3.txt
src/xml/: Makefile.am  Makefile.in  element.cpp  element.h  xml.cpp  xml.h  xmltag.cpp  xmltag.h
src/zip/: AppendedFile.cpp  AppendedFile.h  Makefile.am  Makefile.in  appendedfile.cpp  appendedfile.h  appendfile.cpp  zipfile.cpp  zipfile.h  zipfiletest.cpp  zipfiletest.h
test/: Makefile.am  Makefile.in  main.cpp  testsuit
test/zip/: Makefile.am  Makefile.in  zipfiletest.cpp  zipfiletest.h
tests/: Makefile.am  Makefile.in  gtest  gtest.cpp  libgtest.la
vs/: config.h  getopt.c
