noinst_LIBRARIES = libparser.a

libparser_a_SOURCES = \
	cmapparser.cpp \
	genericparser.cpp \
	pageparser.cpp \
	parser.cpp \
	scanner.cpp \
	token.cpp

noinst_HEADERS = \
	cmapparser.h \
	genericparser.h \
	pageparser.h \
	parser.h \
	scanner.h \
	token.h	

libparser_a_CXXFLAGS = 

MOSTLYCLEANFILES = \
	*.gcda *.gcno *.gcov
